--- a/state/Cargo.toml
+++ b/state/Cargo.toml
@@ -1,12 +1,8 @@
 [package]
-name = "super_continent_core"
+name = "state"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.0", features = ["full"] }
-tokio-tungstenite = "0.18"
-futures-util = "0.3"
-once_cell = "1.10.0"
