--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ tokio = { version = "1.0", features = ["full"] }
 tokio-tungstenite = "0.18"
 futures-util = "0.3"
 once_cell = "1.10.0"
+redis = "0.23.0"
+dotenv = "0.15.0"
+serde = { version = "1.0.126", features = ["derive"] }
+serde_json = "1.0.64"
