--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ redis = "0.23.0"
 dotenv = "0.15.0"
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
+lazy_static = "1.4.0"
