--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ dotenv = "0.15.0"
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
 lazy_static = "1.4.0"
+futures-channel = "0.3.28"
