--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 dotenv = "0.15.0"
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
+lazy_static = "*"
