--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ dotenv = "0.15.0"
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
 lazy_static = "*"
+tokio = {version = "1.4", features = ["full"]}
+chrono = "0.4.24"
