--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dotenv = "0.15.0"
+# dotenv = "0.15.0"
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
 lazy_static = "*"
 tokio = {version = "1.4", features = ["full"]}
-chrono = "0.4.24"
+futures = "0.3.28"
+tokio-tungstenite = "0.20.0"
