--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,7 @@ serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
 lazy_static = "*"
 tokio = {version = "1.4", features = ["full"]}
-futures = "0.3.28"
-tokio-tungstenite = "0.20.0"
+futures = { version = "0.3", default-features = false }
+warp = "0.3"
+tokio-stream = "0.1.14"
+futures-util = "0.3.28"
