--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ lazy_static = "*"
 tokio = {version = "1.4", features = ["full"]}
 fastwebsockets = {version="0.4.4", features= ["upgrade"]}
 hyper = {version="0.14.27", features = ["full"]}
+tokio-sync = "0.1.8"
 
 #futures = { version = "0.3", default-features = false }
 #warp = "0.3"
